@@ -1,4 +1,5 @@
 [CW47]
+* SyncProxyAndroid SDK: Bluetooth transport: Attempt to fix a bug when sending a lot of data for a while on Android prior to 4.2. The transport artificially drops the speed after sent packet.
 + Use "Close Session" menu item to unregister app w/o disconnecting. When the app is started again, it reregisters itself automagically.
 + SyncProxyAndroid SDK: Add SyncProxyBase.closeSession() method that allows to close session w/o disconnecting.
 + SyncProxyAndroid SDK: a few changes to simplify testing.
